--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .header {
-  height: 3.5rem;
+  height: 2.6rem;
   background-color: lightblue;
 }
 
@@ -12,12 +12,14 @@
 }
 
 mat-drawer-container {
-  height: calc(100vh - 3.5rem);
+  height: 100vh;
   width: 100vw;
+
+  @media (max-width: 600px) {
+    height: calc(100vh - 2.6rem);
+  }
 }
 
 mat-drawer {
   width: 250px;
 }
-
-
